# orparapp16s

./: AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.in  NEWS  README  aclocal.m4  config.h  config.h.in~  config.status  configure  configure.ac  libtool
autom4te.cache/: output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
src/: Makefile.am  Makefile.in
src/consensus/: Makefile.am  Makefile.in  README  blastnrow.cpp  blastnrow.h  consensus.cpp  consensus.h  dnaqualstore.cpp  dnaqualstore.h  stalactitegraph.cpp  stalactitegraph.h
src/seqana/: Makefile.am  Makefile.in  README
src/seqana/.deps/: GCcontent.Po  bam2tab-bam2tab.Po  bamfilter-bamfilter.Po  comparefastq.Po  comparetoref.Po  genoanalyzer.Po  picksubseq.Po  polymerstat.Po  selortho.Po  stemloop-stemloop.Po  tabulatepair.Po  validateprtsite.Po
src/seqana/fasta/: Makefile.am  Makefile.in  fastabund.cpp
src/seqana/fasta/.deps/: combineseq.Po  fastabund-fastabund.Po  fastaleninfo.Po  uniqueseq.Po
src/seqconv/: Makefile.am  Makefile.in  README  cpfasqpart.cpp  cpfastapart.cpp  fastareduceid.cpp  fastqpick.cpp  fastqreduceid.cpp  fastqstat.cpp  rna2dna.cpp
src/seqconv/.deps/: bam2cleanfastq-bam2cleanfastq.Po  checkdupfasq.Po  checkdupfasta.Po  cpfasqpart.Po  cpfastapart.Po  fastareduceid.Po  fastq2fasta.Po  fastq2tab.Po  fastqpick.Po  fastqreduceid.Po  fastqstat.Po  fishing-fishing.Po  fishing.Po  linearize-linearize.Po  linearize.Po  parsencbi16s.Po  parsencbissu.Po  parsepatricssu.Po  parserdpssu.Po  parsesilvassu.Po  revcomp.Po  rna2dna.Po  tandemcount.Po  trimfastq.Po
src/test/: Makefile.am  Makefile.in  README  testConsensus.cpp  testStalactiteGraph.cpp  testall.cpp
src/test/.deps/: testall-testall.Po
