#AUTOMAKE_OPTIONS = subdir-objects

# making a minimal version for the 16S project
#headers = stagergap.h nucaln.h MismatchMapping.h match.h stagergap.h
#sources = nucaln.cpp MismatchMapping.cpp match.cpp stagergap.cpp

# so far we are not distributing these headers and libraries
# further organization is needed before a real release
#pkginclude_HEADERS = $(headers)
#noinst_LTLIBRARIES = liborparappcommon.la
#liborparappcommon_la_SOURCES = $(headers) $(sources)

SUBDIRS = . consensus seqconv test
