# mini version for 16s
# None of the binaries are used in the 16S project so this directory is just 
# holder for the make file
#AM_CXXFLAGS = -I.. $(orpara_CXXFLAGS) 
#AM_LDFLAGS = -L.. $(orpara_LDFLAGS)
#LDADD = ../liborparappcommon.la $(orpara_LIBS)
#bin_PROGRAMS = selortho GCcontent stemloop comparetoref picksubseq bam2tab tabulatepair validateprtsite polymerstat comparefastq bamfilter
#bin_PROGRAMS = polymerstat 
#polymerstat_SOURCES = polymerstat.cpp


SUBDIRS = . fasta
