bin_PROGRAMS = cpfasqpart cpfastapart fastareduceid fastqpick \
	 fastqreduceid fastqstat 

#AM_CXXFLAGS=$(orpara_CXXFLAGS)
#AM_LDFLAGS=$(orpara_LDFLAGS)
#LDADD=$(orpara_LIBS)

cpfasqpart_SOURCES = cpfasqpart.cpp
cpfastapart_SOURCES = cpfastapart.cpp
fastareduceid_SOURCES = fastareduceid.cpp
fastqpick_SOURCES = fastqpick.cpp
fastqreduceid_SOURCES = fastqreduceid.cpp
fastqstat_SOURCES = fastqstat.cpp

